--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="contact_form/contact.html">
                             <i class="fa-solid fa-envelope"></i>
                             Contact
                         </a>
@@ -166,7 +166,7 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About us</a></li>
                         <li><a href="#">Services</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contact_form/contact.html">Contact</a></li>
 
                     </ul>
                 </div>
