--- a/contact_form/contact.html
+++ b/contact_form/contact.html
@@ -125,16 +125,16 @@
                     <label for="subject" class="form-label"><h3>Contact information</h3></label>
                 </div>
                 <div class="mb-3">
-                    <label for="subject" class="form-label">Av. Paseos del Mayab 4000, Región 79, 77710 Playa del Carmen, Q.R.</label>
+                    <i class="fa-solid fa-location-dot"></i>Av. Paseos del Mayab 4000, Región 79, 77710 Playa del Carmen, Q.R.
                 </div>
                 <div class="mb-3">
-                    <label for="subject" class="form-label">+52 (984) 877 4600</label>
+                    <i class="fa-solid fa-phone"></i>+52 (984) 877 4600
                 </div>
                 <div class="mb-3">
-                    <label for="subject" class="form-label">info@utrivieramaya.edu.mx</label>
+                    <i class="fa-solid fa-envelope"></i>info@utrivieramaya.edu.mx
                 </div>
                 <div class="mb-3">
-                    <label for="subject" class="form-label">monday to friday: 7:00 am-5:00 pm</label>
+                    <i class="fa-solid fa-clock"></i>monday to friday: 7:00 am-5:00 pm
                 </div>
                 
             </div>
